GPS location functionality was added, to obtain latitude and longitude, with respect to a point configured on the device.

--- a/app/src/main/res/values-es-rMX/strings.xml
+++ b/app/src/main/res/values-es-rMX/strings.xml
@@ -8,8 +8,8 @@
     <string name="currentTime_placeholder">%s</string>
     <string name="temp">TEMP</string>
     <string name="precip">PRECIP</string>
-    <string name="dialy_button_text">DIALY WEATHER</string>
-    <string name="hourly_button_text">hourly weather</string>
+    <string name="dialy_button_text">CLIMA DIARIO</string>
+    <string name="hourly_button_text">CLIMA POR HORA</string>
     <string name="icon_weather_icon">icon weather icon</string>
     <string name="language">es</string>
     <string name="units">si</string>
